Kubernetes/Kyverno/01-validate-require-labels/test-pods.yaml
# good: has the team label  -> ALLOWED
# bad : no team label        -> REJECTED by Kyverno
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: kyverno-demo
  labels:
    team: payments
spec:
  containers:
    - name: app
      image: nginx:1.27-alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: kyverno-demo
spec:
  containers:
    - name: app
      image: nginx:1.27-alpine
